--- a/grub/grub.cfg
+++ b/grub/grub.cfg
@@ -18,7 +18,7 @@ menuentry "Android-x86 9.0-r2 (LVM /system, optional /data)" {
     # Point GRUB to the LV that contains /android-x86/kernel
     # set root='lvm/<VG-name>-Android--system'  # adjust to your VG/LV; note the dash escaping
     set root='(lvm/vdsknba2fXandroid01-boot)'   # adjust to your VG/LV; note the dash escaping
-    linux /kernel root=/dev/ram0 SRC=/android-9.0-r2 ROOT=/dev/vdsknba2fXandroid01/boot androidboot.selinux=permissive
+    linux /kernel root=/dev/ram0 VOLUME=vdsknba2fXandroid01 SRC=/android-9.0-r2 ROOT=/dev/vdsknba2fXandroid01/boot androidboot.selinux=permissive
     # (Optionally include other params you use, e.g. nomodeset, DPI, etc.)
     initrd /initrd-lvm.img
 }
@@ -28,7 +28,7 @@ menuentry "Android-x86 9.0-r2 (Debug mode) (LVM /system, optional /data)" {
     # Point GRUB to the LV that contains /android-x86/kernel
     # set root='lvm/<VG-name>-Android--system'  # adjust to your VG/LV; note the dash escaping
     set root='(lvm/vdsknba2fXandroid01-boot)'   # adjust to your VG/LV; note the dash escaping
-    linux /kernel root=/dev/ram0 DEBUG=2 SRC=/android-9.0-r2 ROOT=/dev/vdsknba2fXandroid01/boot androidboot.selinux=permissive
+    linux /kernel root=/dev/ram0 VOLUME=vdsknba2fXandroid01 DEBUG=2 SRC=/android-9.0-r2 ROOT=/dev/vdsknba2fXandroid01/boot androidboot.selinux=permissive
     # (Optionally include other params you use, e.g. nomodeset, DPI, etc.)
     initrd /initrd-lvm.img
 }
@@ -37,7 +37,7 @@ menuentry "Android-x86 9.0-r2 (Debug nomodeset) (LVM /system, optional /data)" {
     # Point GRUB to the LV that contains /android-x86/kernel
     # set root='lvm/<VG-name>-Android--system'  # adjust to your VG/LV; note the dash escaping
     set root='(lvm/vdsknba2fXandroid01-boot)'   # adjust to your VG/LV; note the dash escaping
-    linux /kernel nomodeset root=/dev/ram0 DEBUG=2 SRC=/android-9.0-r2 ROOT=/dev/vdsknba2fXandroid01/boot androidboot.selinux=permissive
+    linux /kernel nomodeset root=/dev/ram0 VOLUME=vdsknba2fXandroid01 DEBUG=2 SRC=/android-9.0-r2 ROOT=/dev/vdsknba2fXandroid01/boot androidboot.selinux=permissive
     # (Optionally include other params you use, e.g. nomodeset, DPI, etc.)
     initrd /initrd-lvm.img
 }
@@ -46,7 +46,7 @@ menuentry "Android-x86 9.0-r2 (Debug video=LVDS-1:d) (LVM /system, optional /dat
     # Point GRUB to the LV that contains /android-x86/kernel
     # set root='lvm/<VG-name>-Android--system'  # adjust to your VG/LV; note the dash escaping
     set root='(lvm/vdsknba2fXandroid01-boot)'   # adjust to your VG/LV; note the dash escaping
-    linux /kernel video=LVDS-1:d root=/dev/ram0 DEBUG=2 SRC=/android-9.0-r2 ROOT=/dev/vdsknba2fXandroid01/boot androidboot.selinux=permissive
+    linux /kernel video=LVDS-1:d root=/dev/ram0 VOLUME=vdsknba2fXandroid01 DEBUG=2 SRC=/android-9.0-r2 ROOT=/dev/vdsknba2fXandroid01/boot androidboot.selinux=permissive
     # (Optionally include other params you use, e.g. nomodeset, DPI, etc.)
     initrd /initrd-lvm.img
 }
